<resources>
    <string name="app_name">Qr Holder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="qrcodepreview">QrCodePreview</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu">Menu</string>
    <string name="qrList">QrList</string>
    <string name="copy_right_mark">©AlezZgo, 2023</string>
    <string name="app_version">app version:</string>
    <string name="support">Support</string>
    <string name="rate_app">Rate application</string>
    <string name="build_qr_code">Create your own qr code</string>
    <string name="choose_image_from_gallery">Choose image from gallery to search Qr code!</string>
    <string name="open_camera_to_find_qr_code">Open your camera to find Qr code</string>
    <string name="click_to_add_qr_code">Click here to add new Qr code by different ways</string>
    <string name="defaultErrorMessage">Something went wrong</string>
    <string name="empty" />
    <string name="search_query_hint">Search</string>
    <string name="tittle">Title</string>
    <string name="content">Content</string>
    <string name="build">Build</string>
    <string name="nothing_was_found_with_this_filter_clear_the_search_field_and_try_again">Nothing was found with this filter. \n Clear the search field and try again!</string>
    <string name="the_storage_is_empty_create_your_first_qr_code">The storage is empty. \n Create your first QR code!</string>
    <string name="input_edit_text_error_this_field_cannot_be_empty">This field cannot be empty</string>
    <string name="input_edit_text_error_this_field_must_contain_at_least_d_characters">This field must contain at least %s characters</string>
    <string name="input_edit_text_error_this_field_must_contain_no_more_then_d_characters">This field must contain no more than %s characters</string>
    <string name="field_MIN_cannot_be_less_then_0">field MIN cannot be less then 0</string>
    <string name="field_MAX_cannot_be_less_or_equal_0">field MAX cannot be less or equal 0</string>
    <string name="error">Error</string>
    <string name="successful_creation">Successful creation</string>
    <string name="ok">Ok</string>
    <string name="unable_to_save_image_to_internal_storage">Unable to save image to internal storage</string>
    <string name="share">Share</string>
    <string name="browse">Browse</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="support_link">https://t.me/AlezZGO</string>
    <string name="cancel">Cancel</string>
    <string name="sure_delete_qr_code">Are you sure want to delete this qr code?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_changing_system_settings_title">Enable changing system settings for this application to manage the brightness of your screen</string>
    <string name="enable_changing_system_settings_content">Auto increasing brightness will be allowed only if you will give us the system settings changing permission </string>
    <string name="never_show_it_again">never show it again</string>
    <string name="enable_read_images_from_gallery_title">App needs a permission to get access to your gallery images</string>
    <string name="enable_read_images_from_gallery_content">To have an ability to get qr code from gallery images you must have to give the appropriate permission</string>
    <string name="no_thanks">no thanks</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_forever_message">"You have denied permission forever. You can change your decision in app settings.\nWould you like to open app settings? "</string>
    <string name="qr_code_was_not_found">Qr code was not found</string>
    <string name="app_link">https://apps.rustore.ru/app/com.example.qrholder</string>

</resources>