<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="?attr/colorBackgroundFloating"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/share"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_share_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/include"
            layout="@layout/gray_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share" />

        <TextView
            android:id="@+id/browse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/browse"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_open_in_browser_24"
            app:layout_constraintTop_toBottomOf="@+id/share"
            tools:layout_editor_absoluteX="8dp" />

        <include
            android:id="@+id/include2"
            layout="@layout/gray_line"
            app:layout_constraintTop_toBottomOf="@+id/browse" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/delete"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_delete_24"
            app:layout_constraintTop_toBottomOf="@+id/browse"
            tools:layout_editor_absoluteX="24dp" />

        <include
            android:id="@+id/include3"
            layout="@layout/gray_line"
            app:layout_constraintTop_toBottomOf="@+id/delete" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/edit"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_baseline_edit_24"
            app:layout_constraintTop_toBottomOf="@+id/delete"
            tools:layout_editor_absoluteX="24dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>