<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menu.MenuFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="4dp"
            android:elevation="32dp"
            app:cardCornerRadius="@dimen/cv_corner_radius"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivSupport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_contact_support_24" />

                <TextView
                    android:id="@+id/tvSupport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/support" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <include layout="@layout/gray_line" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvRateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="4dp"
            android:elevation="32dp"
            app:cardCornerRadius="@dimen/cv_corner_radius"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivRateApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                <TextView
                    android:id="@+id/tvRateApp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/rate_app" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:id="@+id/tvCopyRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_right_mark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAppVersionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version" />

            <TextView
                android:id="@+id/tvAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1.0.0" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>